# NanoStation

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CompilerOptions.cmake  GlobalCompilerOptions.cmake
ext/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/common/: algorithm.hpp  build_options.hpp  bump_allocator.cpp  bump_allocator.hpp  emulator.cpp  emulator.hpp  fatal_error.hpp  host.hpp  inplace_function.hpp  jit_common.cpp  jit_common.hpp  jit_utils.hpp  log.cpp  log.hpp  numtypes.hpp  platform.hpp  scheduler.cpp  scheduler.hpp  status.hpp  types.hpp  util.hpp
src/ee/: cop0.cpp  cop0.hpp  cop1.cpp  cop1.hpp  cop2.cpp  cop2.hpp  cpu.cpp  cpu.hpp  cpu_interpreter.cpp  cpu_interpreter.hpp  disassembler.cpp  disassembler.hpp  ee.cpp  ee.hpp  ee_interpreter.cpp  ee_interpreter.hpp  eef32.hpp  exceptions.cpp  exceptions.hpp  intc.cpp  intc.hpp  jit.cpp  jit.hpp  mmi.cpp  mmi.hpp  mmu.cpp  mmu.hpp  reg128.hpp  register_allocator.cpp  register_allocator.hpp  timers.cpp  timers.hpp  vu.hpp  vu_interpreter.cpp
src/frontend/: message.cpp  message.hpp
src/iop/: cop0.cpp  cop0.hpp  cop2.cpp  cop2.hpp  cpu.cpp  cpu.hpp  exceptions.cpp  exceptions.hpp  iop.cpp  iop.hpp  memory.cpp  memory.hpp
src/mips/: decoder.cpp  decoder.hpp  disassembler.cpp  disassembler.hpp  gpr.hpp  mips.hpp  types.hpp
test/: CMakeLists.txt  test_ee_timers.cpp  test_register_allocator.cpp
